--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "nodemon": "^2.0.21"
   }
 }
