--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "type": "git",
     "url": "git+https://github.com/Space-TFF/space-explorer-backend.git"
   },
-  "author": "Susan Eva Mike",
+  "author": "Susan Eva Jack",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Space-TFF/space-explorer-backend/issues"
   },
   "homepage": "https://github.com/Space-TFF/space-explorer-backend#readme",
   "dependencies": {
+    "@prisma/client": "^5.4.1",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -25,5 +26,8 @@
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "mongoose": "^6.10.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.4.1"
   }
 }
