--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "jwks-rsa": "^3.0.1",
-    "mongoose": "^6.10.0"
+    "jwks-rsa": "^3.0.1"
   },
   "devDependencies": {
     "prisma": "^5.4.1"
