--- a/.gitignore
+++ b/.gitignore
@@ -150,5 +150,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+prisma/migrations
 
 # End of https://www.gitignore.io/api/node,linux,macos,windows,visualstudiocode
