--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Space-TFF/space-explorer-backend#readme",
   "dependencies": {
+    "@appland/appmap-agent-js": "^14.2.0",
     "@prisma/client": "^5.4.1",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
